--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -5,6 +5,11 @@
     justify-content: center;
     padding: 5px 3px;
     width: 100%;
+    position: fixed; /*screen-header와 겹치는 현상 해결*/
+    /*position: sticky;
+    top: 0px;
+    right: 0px;
+    left: 0px;*/
 }
 .status-bar__column {
     width: 33%;
