--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -43,7 +43,7 @@ user-component__avatar--sm {
 }
 
 .user-component__column:last-child {
-    color: rgba(0, 0, 0, 0.4);
+    color: var(--font-color);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
