--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -34,7 +34,7 @@
 }
 
 #login-form input::placeholder {
-    color: rgba(0, 0, 0, 0.4);
+    color: var(--font-color);
 }
 
 #login-form input:focus {
