--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -25,6 +25,8 @@
     margin-top: 8px;
     font-size: 17px;
     opacity: 0.7;
+    display: flex;
+    align-items: center;
 }
 
 .user-component__avatar--xl {
@@ -32,7 +34,7 @@
     height: 80px;
 }
 
-user-component__avatar--sm {
+.user-component__avatar--sm {
     width: 60px;
     height: 60px;
     border-radius: 25px;
