--- a/css/styles.css
+++ b/css/styles.css
@@ -9,15 +9,17 @@
 @import "components/badge.css";
 @import "components/point.css";
 @import "components/icon-row.css";
+@import "components/alt-creen-header.css";
 
 /*screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
 body {
     color: #2e363e;
-    height: 1000vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
