--- a/css/components/alt-creen-header.css
+++ b/css/components/alt-creen-header.css
@@ -7,6 +7,10 @@
     align-items: center;
 }
 
+.alt-header__column { /*Jun 콘텐츠가 정중앙에서 살짝 벗어난 것을 수정하기 위한 css핵*/
+    width: 33%; /*1.먼저 3개의 alt-header__column을 각각 3분의 1인 33프로로 배치한 다음*/
+}
+
 .alt-header__title {
     font-size: 28px;
     font-weight: 600;
@@ -15,8 +19,13 @@
 .alt-header__column:first-child {
     margin-right: auto;
 }
+.alt-header__column:nth-child(2) {
+    text-align: center; /*2.가운데를 중앙정렬하고*/
+}
 .alt-header__column:last-child {
     margin-left: auto;
+    display: flex; /*3.돋보기와 삼단바를 flex-end로 오른쪽 정렬*/
+    justify-content: flex-end;
 } /*여기까지 settings.html*/
 
 /* 위 코드와 아래 코드의 차이점은 space-between이 글자 수에 따라서 배열이 중앙 정렬이 안되지만
