--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     padding: 5px 3px;
-    width: 100%;
+    width: 100%; /*position: fixed 적용 후 콘텐츠가 쏠리는 현상 해결*/
     position: fixed; /*screen-header와 겹치는 현상 해결*/
     /*position: sticky;
     top: 0px;
