--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,3 +1,154 @@
 .chat-screen {
     background-color: lightseagreen;
+    height: 10000vh;
+}
+
+
+.chat-screen .alt-header {
+    position: fixed; /*요소의 위치를 뷰포트를 기준으로 설정하지만, 요소의 너비를 내용물에 맞추지 않기 때문에 한 쪽으로 쏠림*/
+    width: 100%; /*position: fixed 적용 후 콘텐츠가 쏠리는 현상 해결*/
+    box-sizing: border-box; /*nav-bar.css에 설명*/
+    top: 10px;
+    background-color: lightseagreen;
+    z-index: 1; /*기본값은 0이고 숫자가 클 수록 낮은 layer를 덮음, position:fixed,absolut에 이용가능*/
+}
+
+.chat-screen .status-bar {
+    background-color: lightseagreen;
+    z-index: 2;
+}
+
+
+.main-chat {
+    padding: 0 15px;
+    padding-top: 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chat__timestamp {
+    color: white;
+    background-color: rgb(18, 131, 131);
+    border-radius: 25px;
+    padding: 7px 13px;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+
+.message-row {
+    width: 100%; /*width를 100%주면 화면 폭만큼의 크기를갖고 message-row자체는 flex박스의 영향을 받지만 내부컨텐츠인 img나 message-row내부 자식들은 직접적인 영향을 받지않아서 디폴트로 좌측에 정렬*/
+    display: flex;
+    margin-bottom: 25px;
+}
+
+.message-row img {
+    width: 40px;
+    height: 40px;
+    border-radius: 15px;
+    margin-right: 15px;
+}
+
+.message__author {
+    opacity: 0.7;
+    font-size: 15px;
+    margin-bottom: 8px;
+    display: block;
+}
+
+.message__bubble {
+    background-color: white;
+    padding: 8px 13px;
+    border-radius: 15px;
+    border-top-left-radius: 0px;
+}
+
+.message__info {
+    display: flex;
+    align-items: flex-end;
+}
+
+.message__time {
+    margin-left: 10px;
+    font-size: 13px;
+    opacity: 0.7;
+}
+
+.message-row--own .message__bubble {
+    border-radius: 15px;
+    border-top-right-radius: 0px;
+}
+
+.message-row--own {
+    justify-content: flex-end;
+}
+
+.message-row--own .message__bubble {
+    background-color: var(--yellow);
+    margin-right: 0;
+    margin-left: 10px;
+}
+
+.message-row--own .message__info {
+    flex-direction: row-reverse;
+}
+
+
+.reply {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 25px;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+.reply .reply__column:first-child {
+    width: 10%;
+}
+.reply .reply__column:last-child {
+    width: 90%;
+    position: relative;
+}
+.reply input {
+    width: 100%;
+    height: 30px;
+    border:var(--main-border);
+    border-radius: 20px;
+}
+
+.reply__column:last-child > i, /*last-child i는 버튼 안의 아이콘까지 선택하므로 child를 다이렉트로 선택*/
+.reply__column:last-child button {
+    position: absolute;
+    right: 3px;
+    top: 2px;
+}
+
+.reply__column:last-child > i {
+    right: 40px;
+    top: 17px;
+}
+
+.reply i {
+    opacity: 0.5;
+}
+
+.reply__column button {
+    background-color: var(--yellow);
+    border: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+.reply__column button i {
+    opacity: 1;
+}
+
+.reply__column button :focus,
+.reply__column button:active {
+    outline: none;
 }
