--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -11,7 +11,22 @@
     font-size: 32px;
     font-weight: 600;
 }
+
+
 .screen-header__icons span {
     margin-left: 25px;
     position: relative;
+}
+
+@keyframes rotateCog {
+    from {
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+
+.screen-header__icons .fa-gear:hover {
+    animation: rotateCog 1s linear infinite;
 }
