--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -103,3 +103,23 @@
 .open-post__heart-count span {
     margin-left: 3px;
 }
+
+@keyframes heartBeat {
+    0%{
+        color: white;
+        transform: none;
+    }
+    50%{
+        color: tomato;
+        transform: scale(1.5);
+    }
+    100%{
+        color: white;
+        transform: none;
+    }
+}
+
+.open-post__heart-count i {
+    will-change: transform; /*애니메이션이 좀 더 부드럽게 동작할 수 있게 함 → 브라우저에게 어떤 것이 변할 것인지 예고해주는 것*/
+    animation: heartBeat 1s linear infinite;
+}
