--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -24,3 +24,28 @@
     justify-content: space-between;
     color: var(--font-color);
 }
+
+
+@keyframes hideSplahScreen {
+    for{
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.splash-screen {
+    background-color: var(--yellow);
+    position: absolute;
+    height: 100vh;
+    width: 100vw; /*100vw = 화면 너비, 100% = PARENT의 100%*/
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 130px;
+    animation: hideSplahScreen 0.4s ease-in-out forwards;
+    animation-delay: 1s;
+}
