--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 @import "components/point.css";
 @import "components/icon-row.css";
 @import "components/alt-creen-header.css";
+@import "components/no-mobile.css";
 
 /*screens*/
 @import "screens/login.css";
@@ -21,6 +22,10 @@
 body {
     color: #2e363e;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* Chat에서 스크롤 불가 설정 
+    margin: 0;
+    height: 100%;
+    overflow: hidden;*/
 }
 
 .main-screen {
